--- a/grc338/lasagna/lasagnastyle.css
+++ b/grc338/lasagna/lasagnastyle.css
@@ -1,7 +1,7 @@
 /*CSS DOCUMENT*/
   @import url("https://use.typekit.net/ktn6bul.css");
 
-.container{
+div.container{
 background: #fffcf0;
 max-width: 50em;
 margin: auto;
@@ -35,7 +35,7 @@ text-transform: uppercase;}
 
 div .intro{
 background: #913500;
-width: auto;
+max-width: 50em;
 padding: 3%;
 height: auto;
 overflow: auto;}
@@ -61,7 +61,7 @@ letter-spacing: 0.1em;
 
 .maincontent{
 background: #fffcf0;
-width: 100%;
+max-width: 50em;
 padding: 3%;}
 
 .ingredients{
